--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "HDI"
-title: "Humanities Data Inquiry"
+name: "Humanities Data Inquiry"
+title: "Home"
 description: "Website of the Humanities Data Inquiry Project, hosted by the University of Lethbridge Humanities Innovation Lab."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
