--- a/_config.yml
+++ b/_config.yml
@@ -71,3 +71,5 @@ adsense-data-ad-slot: "1363087678"
 lazyimages: "disabled"
 
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
+
+#note the tabs are found in layouts.default.html
