--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Home"
 description: "Website of the Humanities Data Inquiry Project, hosted by the University of Lethbridge Humanities Innovation Lab."
 logo: 'assets/images/HDITempLogo.png'
 favicon: 'assets/images/HDITempLogo.png'
-baseurl: /HDI-site
+baseurl: 
 google_analytics: ''
 disqus: ''
 mailchimp-list: ''
