Added image for me to assets and changed the config to add it to my profile.

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ authors:
   dan:
     name: Daniel Paul O'Donnell
     display_name: Dan
+    avatar: 'assets/images/standardHeadShot-small.png'
     gravatar: 
     email: daniel.odonnell@uleth.ca
     web: http://people.uleth.ca/~daniel.odonnell/
