--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Humanities Data Inquiry"
 title: "Home"
 description: "Website of the Humanities Data Inquiry Project, hosted by the University of Lethbridge Humanities Innovation Lab."
-logo: 'assets/images/HDITempLogo.png'
-favicon: 'assets/images/HDITempLogo.png'
+logo: 'assets/images/HDIFinchSquare.png'
+favicon: 'assets/images/HDIFinchSquare.ico'
 baseurl: 
 google_analytics: ''
 disqus: ''
