--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ authors:
   khalid:
     name: Iftekhar Khalid
     display_name: Khalid 
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/International-3.jpg'
     gravatar: 
     email: 
     web: 
