--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ authors:
     avatar: 'assets/images/International-3.jpg'
     gravatar: 
     email: 
-    web: 
+    web: https://khalidfac.wixsite.com/iftekharkhalid
     twitter: 
     description: "."
 
