--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ authors:
     display_name: Khalid 
     avatar: 'assets/images/International-3.jpg'
     gravatar: 
-    email: 
+    email: khalid@uleth.ca
     web: https://khalidfac.wixsite.com/iftekharkhalid
-    twitter: 
-    description: "."
+    twitter: https://twitter.com/akmkhalid
+    description: "Graduate Student at the University of Lethbridge"
 
 # Plugins
 plugins:
